@@ -208,7 +208,8 @@ class ConfigManager(object):
         self.collapsed_configs = {}
         self._exec_configs(self.original_configs)
 
-    __getattr__ = _ConfigMapping
+    def __getattr__(self, attr):
+        return _ConfigMapping(self, attr)
 
     def _exec_configs(self, configs):
         """Pull extra type and config sections from configs and use them.
